tests/diagnostics_golden/diag_borrow_conflict.txt
Diagnostics Golden: Borrow Conflict
Source: tests/negative/neg_own_borrow_conflict.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_own_borrow_conflict.safe:25:11: error: lender 'Owner' is frozen by an active mutable borrow
  |
  | 25 |       v = Owner.value;  -- ERROR: lender accessed during active borrow
  |    |           ^~~~~
  |
  note: reads, writes, and moves of the lender are forbidden while the borrow is active.
  note: rule: Safe §2.3.3 (mutable borrow freezes lender)

------------------------------------------------------------------------
